Bug fix: wrapping for 10G's output eliminated the newlines from all the other exercises' output, so disable the wrapping for now.

--- a/app/assets/stylesheets/exercise.scss
+++ b/app/assets/stylesheets/exercise.scss
@@ -220,13 +220,13 @@ div.exercise {
         span.stdin {
           background-color: yellow;
         }
-        span.stdout, span.stderr {
-          display: inline-block; // so text-indent is supported
-          word-wrap: normal;
-          white-space: normal;
-          text-indent: -10px;
-          margin-left: 10px;
-        }
+        //span.stdout, span.stderr {
+        //  display: inline-block; // so text-indent is supported
+        //  word-wrap: normal;
+        //  white-space: normal;
+        //  text-indent: -10px;
+        //  margin-left: 10px;
+        //}
         span.stderr {
           color: red;
         }
